--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ button[type='submit']:hover {
   background-color: #0060b2;
 }
 
+.footer {
+  background-color: #333; /* or any other color */
+  color: #fff; /* or any other color */
+  text-align: center; /* center the text in the footer */
+  padding: 10px; /* add some padding */
+  position: absolute; /* position the footer at the bottom of the page */
+  bottom: 0; /* position the footer at the bottom of the page */
+  width: 100%; /* make the footer span the full width of the page */
+}
+
 #wordCount,
 #speakingTime {
   font-weight: bold;
